<resources>
    <string name="album">Album</string>
    <string name="album_delete_this_photo_confirm">Sure to delete this photo?</string>
    <string name="album_delete_these_photo_confirm">Sure to delete these photo?</string>
    <string name="album_no_one_select">Do not select any photo~</string>
    <string name="album_empty_album_string">No snapshot record!</string>
    <string name="app_name">Wulian iCam</string>
    <string name="common_accept">Accept</string>
    <string name="common_btn_copy">Copy</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_change_pwd">Change password</string>
    <string name="common_change_pwd_fail">Change password failed</string>
    <string name="common_change_pwd_success">Change password succeeded</string>
    <string name="common_check_all">Choose all</string>
    <string name="common_check_count"><![CDATA[Selected <font color=#099CE4>%d</font> items]]></string>
    <string name="common_colon">:</string>
    <string name="common_come_from">Come from:</string>
    <string name="common_day_ago">day(s) ago</string>
    <string name="common_decline">Decline</string>
    <string name="common_delete">Delete</string>
    <string name="common_delete_failed">Delete failed</string>
    <string name="common_delete_success">Delete succeeded</string>
    <string name="common_down_pull_refresh">Pull down to refresh</string>
    <string name="common_end_than_start">End time must bigger than start time</string>
    <string name="common_end_time">End Time</string>
    <string name="common_everyday">everyday</string>
    <string name="common_finish">Finish</string>
    <string name="common_fri">Fri</string>
    <string name="common_function">Function</string>
    <string name="common_hour">hour</string>
    <string name="common_hour_ago">hour(s) ago</string>
    <string name="common_i_know">I got it</string>
    <string name="common_icam">iCam</string>
    <string name="common_icam_type_01">iCam camera</string>
    <string name="common_icam_type_03">Lookever camera</string>
    <string name="common_icam_type_02">Outdoor camera</string>
    <string name="common_icam_type_04">iCam camera 02 type</string>
    <string name="common_icam_type_05">Lookever camera night</string>
    <string name="common_icam_type_06">DeskTop camera</string>
    <string name="common_icam_type_none">Unsupported devices</string>
    <string name="common_ignore">Ignore</string>
    <string name="common_in_processing">In progress, please wait…</string>
    <string name="common_input_name">Enter name</string>
    <string name="common_just">Just now</string>
    <string name="common_last_update">Last updated</string>
    <string name="common_loading">Loading…</string>
    <string name="common_min">min</string>
    <string name="common_min_ago">minute(s) ago</string>
    <string name="common_mon">Mon</string>
    <string name="common_month_ago">month(s) ago</string>
    <string name="common_network_protect">Flow protection</string>
    <string name="common_next_step">Next step</string>
    <string name="common_no_sdcard">No SD card</string>
    <string name="common_none_account">Unknown error</string>
    <string name="common_password">Password</string>
    <string name="common_prompt">Prompt</string>
    <string name="common_record">Record</string>
    <string name="common_replay">Replay</string>
    <string name="common_stop">Stop</string>
    <string name="common_recent_update">Recent updated:</string>
    <string name="common_refresh_list">Refresh list</string>
    <string name="common_refresh_now">Refreshing…</string>
    <string name="common_refreshing">Refreshing, please wait…</string>
    <string name="common_regex_pwd_all_equal">Passwords cannot be same numbers or letters</string>
    <string name="common_regex_pwd_conti">Passwords cannot be continuous numbers or letters</string>
    <string name="common_regex_pwd_range">Password for 6–18 chars</string>
    <string name="common_release_refresh">Loosen to refresh</string>
    <string name="common_repeat">repeat</string>
    <string name="common_reset">Reset</string>
    <string name="common_result">Result</string>
    <string name="common_retry">Retry</string>
    <string name="common_scene">Scene</string>
    <string name="common_sat">Sat</string>
    <string name="common_save_success">save successful</string>
    <string name="common_save_fail">Save failed</string>
    <string name="common_save_to_album">Save to album</string>
    <string name="common_select_timezone">Select timezone</string>
    <string name="common_send">Send</string>
    <string name="common_send_fail">Authorization request send failed!</string>
    <string name="common_setting">Setting</string>
    <string name="common_setting_fail">Setting failed</string>
    <string name="common_setting_success">Setting succeeded</string>
    <string name="common_share">Share</string>
    <string name="common_start_setting">Start Setting</string>
    <string name="common_start_time">Start Time</string>
    <string name="common_sun">Sun</string>
    <string name="common_sure">Sure</string>
    <string name="common_thurs">Thurs</string>
    <string name="common_tip">Hint</string>
    <string name="common_today">Today</string>
    <string name="common_tomorrow">Tomorrow</string>
    <string name="common_tue">Tues</string>
    <string name="common_unbind">Unbind</string>
    <string name="common_unknown">Unknown</string>
    <string name="common_watch_live">Watch live</string>
    <string name="common_wed">Wed</string>
    <string name="common_workday">workday</string>
    <string name="config_add_camera">Add Camera</string>
    <string name="config_add_camera_advent_old">Just several steps to connect camera with internet, check home staus and record home life anytime and anywhere</string>
    <string name="config_add_camera_advent_first">Record Valuable Moments</string>
    <string name="config_add_camera_advent_second">Real-Time Video Communication</string>
    <string name="config_add_camera_advent_third">Mobile Detection and Alarm</string>
    <string name="config_add_fail">Add camera failed</string>
    <string name="config_adhoc_is_not_suppored">AdHoc is not supported by Android platform yet!</string>
    <string name="config_already_hear_tip_voice">Heard prompt voice</string>
    <string name="config_back_home">Back to homepage</string>
    <string name="config_barcode_config">QR code setting</string>
    <string name="config_barcode_connect_other_camera">Connect others\' camera by barcode</string>
    <string name="config_barcode_expire">The current two-dimensional code has expired, please re-configure</string>
    <string name="config_barcode_get_retry">Re-configure</string>
    <string name="config_barcode_invalid">Invalid QR code? change another one</string>
    <string name="config_barcode_link">QR code connecting</string>
    <string name="config_barcode_link_tip">Camera and cell phone are under the same wifi, and keep appropriate distance with router</string>
    <string name="config_barcode_mine">My camera QR code</string>
    <string name="config_barcode_show_tips">Scan camera QR code \n to add device</string>
    <string name="config_barcode_tips">Scan QR code with distance of 10Ὰ20 centimeters</string>
    <string name="config_barcode_tips_hear_voice">When you hear the "beep" tone, click Next</string>
    <string name="config_barcode_type_add">Add with QR code</string>
    <string name="config_other_way_type_add">Add with other way</string>
    <string name="config_bind_user">Bind username</string>
    <string name="config_binding_to_your_account">Binding device to your account…</string>
    <string name="config_camera_framework_bug">Camera access is not allowed, please try again after the cell phone camera is allowed to access</string>
    <string name="config_camera_wifi_success">Camera configures with Wi-Fi successfully!</string>
    <string name="config_capture_device">Scan device</string>
    <string name="config_caputure_choice">Choice</string>
    <string name="config_caputure_select">Select</string>
    <string name="config_caputure_cancel">Cancel</string>
    <string name="config_caputure_share">Share to a small partner</string>
    <string name="config_click_device_set_button"><![CDATA[Click<font color=#eb743b>SET</font>key twice quickly<br/>and check whether can hear [beep][beep][beep] prompt voice]]></string>
    <string name="config_click_device_sys_button"><![CDATA[Click<font color=#eb743b>SYS</font>key twice quickly<br/>and check whether can hear [beep] prompt voice]]></string>
    <string name="config_config_wifi_advent">To reconfigure the camera using WiFi, the camera needs to be connected, follow the instructions in the vicinity of the device, oh.</string>
    <string name="config_confirm_wifi_hidden">Please confirm current Wi-Fi is not hidden</string>
    <string name="config_connect_my_camera">Connect my camera</string>
    <string name="config_connect_wifi">Connect wifi</string>
    <string name="config_connect_wifi_finish">After finished,Click "Next"</string>
    <string name="config_connect_wifi_first">Please connect Wi-Fi first</string>
    <string name="config_connect_wifi_manual">Connect wifi manually</string>
    <string name="config_connect_wifi_manual_tip"><![CDATA[Input WiFi name and password<br/>Safity:WPA/WAP2 PSK]]></string>
    <string name="config_connect_wifi_name"><![CDATA[WiFi Name:<font color=#eb743b>%s</font>]]></string>
    <string name="config_connect_wifi_psw"><![CDATA[WiFi Passwork:<font color=#eb743b>%s</font>]]></string>
    <string name="config_connect_wifi_tip">Open WiFi, Find the device and connect</string>
    <string name="config_connect_wired_config_way">Via a wired connection</string>
    <string name="config_connect_wired_config_way_tip">Wired connection, plug the Internet cable to connect to the network!</string>
    <string name="config_connect_wifi_direct_config_way">Via a WiFi connection</string>
    <string name="config_copy_wifi_name">Wifi name copied</string>
    <string name="config_copy_wifi_psw">Wifi password copied</string>
    <string name="config_device_bind_others">The Camera has been bound by other users</string>
    <string name="config_how_to_speed_up_config_wifi">How to connect camera with Internet quickly?</string>
    <string name="config_request_view">Apply to watch</string>
    <string name="config_success">Camera added!</string>
    <string name="config_success_tips">You can use camera to talke with family members, look after pets. Distance is not a problem any longer!</string>
    <string name="info_feedback_desc">"Dear customer, please describe your problems, or any suggestions"</string>
    <string name="info_feedback_contact"> Your contact information (cell phone number, QQ number or email address)</string>
    <string name="info_word_limit">0/300</string>
    <string name="login">Login</string>
    <string name="login_newer_reg">User Registration</string>
    <string name="login_out">Log out</string>
    <string name="main_device">Device</string>
    <string name="message_alarm_msg">Alarm Message</string>
    <string name="protect_area">Detection area</string>
    <string name="protect_launch">Start Protection</string>
    <string name="protect_sensitivity">Sensitivity</string>
    <string name="protect_time">Detection time</string>
    <string name="replay_video">History video</string>
    <string name="setting_input_wifi_limit">The camera does not support 5G network now</string>
    <string name="setting_input_wifi_pwd">Enter Wi-Fi password</string>
    <string name="setting_link_wifi_tip">Please put the camera as close to the router as possible</string>
    <string name="setting_domain_address">Camera Domain:</string>
    <string name="setting_switch_formal">Formal server</string>
    <string name="setting_switch_test">Test server</string>
    <string name="setting_switch">Switch</string>
</resources>