<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/titlebar_general" />
    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--style="@style/setting_item_single_textview"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/setting_domain_address" />

        <TextView
            android:id="@+id/tv_device_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="@color/grey_2"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_switch_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        />
    </LinearLayout>

        <Button
            android:id="@+id/btn_switch"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/setting_switch"
            android:background="@drawable/selector_shape_round_rect_red"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:visibility="gone"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_formal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_switch_formal"
            />
        <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_switch_test"
            />

    </LinearLayout>
</LinearLayout>