<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <include layout="@layout/titlebar_general" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3.0"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_device_binded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/v2_body_margin_top"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/config_device_bind_others"
                android:textColor="@color/v2_text_special_show_color"
                android:textSize="@dimen/v2_normal_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_device_name"
            android:textSize="@dimen/v2_small_size"
            android:textColor="@color/v2_text_gray_1_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            
            android:text="@string/app_name" />

        <ImageView
            android:id="@+id/iv_device_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_device_name"
            android:layout_below="@id/ll_device_binded"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:scaleType="matrix"
            android:src="@drawable/type_03_device" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2.0" >

        <Button
            android:id="@+id/btn_request_view_device"
            style="@style/v2_btn_normal_style"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/config_request_view" />

        <TextView
            android:id="@+id/tv_back_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_back_home"
            android:textSize="@dimen/v2_small_size"
            android:textColor="@color/normal_color"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_above="@id/btn_request_view_device"
            android:gravity="center_horizontal"
            />
    </RelativeLayout>



</LinearLayout>