<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <include layout="@layout/titlebar_general" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_container_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_protect_time_move"
                style="@style/setting_middle_shape"
                android:layout_marginTop="10dp" >

                <TextView
                    style="@style/setting_item"
                    android:text="@string/protect_time" />

                <TextView
                    android:id="@+id/tv_move_time_show"
                    style="@style/setting_item"
                    android:layout_weight="2"
                    android:textColor="@color/control_color" />

                <ImageView style="@style/setting_arrow" />
            </LinearLayout>

            <LinearLayout style="@style/ll_divider" >

                <ImageView style="@style/img_divider" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_protect_area_move"
                style="@style/setting_top_shape" >

                <TextView
                    style="@style/setting_item"
                    android:text="@string/protect_area" />

                <TextView
                    android:id="@+id/tv_move_area_show"
                    style="@style/setting_item"
                    android:layout_weight="2"
                    android:textColor="@color/control_color" />

                <ImageView style="@style/setting_arrow" />
            </LinearLayout>

            <LinearLayout style="@style/ll_divider" >

                <ImageView style="@style/img_divider" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sensitivity_move"
                style="@style/setting_bottom_shape"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/setting_item"
                    android:text="@string/protect_sensitivity" />

                <SeekBar
                    android:id="@+id/sb_move"
                    style="@style/SeekBar_mini"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:max="100"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:progress="50" >
                </SeekBar>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_start_protect"
            style="@style/v2_btn_normal_style"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/protect_launch" />
    </LinearLayout>

</LinearLayout>